--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "1.6.6",
     "cookie-parser": "1.3.2",
     "csurf": "1.5.0",
+    "ejs": "~1.0.0",
     "errorhandler": "1.1.1",
     "express": "4.8.1",
     "express-session": "1.7.6",
@@ -22,10 +23,10 @@
     "less-middleware": "1.0.4",
     "method-override": "2.1.3",
     "moment": "^2.8.4",
+    "mongodb": "^2.0.46",
     "mongoskin": "2.0.3",
     "morgan": "1.2.3",
-    "serve-favicon": "2.1.1",
-    "ejs": "~1.0.0"
+    "serve-favicon": "2.1.1"
   },
   "keywords": [
     "MEAN",
@@ -43,7 +44,7 @@
     "url": "https://github.com/airasheed/todo-mvc/issues"
   },
   "homepage": "https://github.com/airasheed/todo-mvc#readme",
-  "engines":{
-    "node":"0.12.3"
+  "engines": {
+    "node": "0.12.3"
   }
 }
